--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"private": "true",
+	"type": "module",
 	"scripts": {
 		"dev": "vitepress dev",
 		"build": "vitepress build",
@@ -13,6 +14,11 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"vitepress": "^1.2.2"
+		"@types/node": "^20.14.7",
+		"vitepress": "^1.2.3"
+	},
+	"dependencies": {
+		"vite": "^5.3.1",
+		"vue": "^3.4.29"
 	}
 }
